🐾 update to ditaa v0.11.0