@@ -1,22 +1,21 @@
-/*
- * DiTAA - Diagrams Through Ascii Art
+/**
+ * ditaa - Diagrams Through Ascii Art
+ * 
+ * Copyright (C) 2004-2011 Efstathios Sideris
  *
- * Copyright (C) 2004 Efstathios Sideris
+ * ditaa is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU Lesser General Public License as 
+ * published by the Free Software Foundation, either version 3 of
+ * the License, or (at your option) any later version.
  *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; either version 2
- * of the License, or (at your option) any later version.
- *
- * This program is distributed in the hope that it will be useful,
+ * ditaa is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * GNU Lesser General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- *
+ * You should have received a copy of the GNU Lesser General Public
+ * License along with ditaa.  If not, see <http://www.gnu.org/licenses/>.
+ *   
  */
 package org.stathissideris.ascii2image.text;
 
@@ -35,14 +34,14 @@ import org.stathissideris.ascii2image.core.ProcessingOptions;
 
 
 /**
- *
+ * 
  * @author Efstathios Sideris
  */
 public class TextGrid {
 
 	private static final boolean DEBUG = false;
 
-	private ArrayList<StringBuffer> rows;
+	private ArrayList<StringBuilder> rows;
 
 	private static char[] boundaries = {'/', '\\', '|', '-', '*', '=', ':'};
 	private static char[] undisputableBoundaries = {'|', '-', '*', '=', ':'};
@@ -52,7 +51,7 @@ public class TextGrid {
 	private static char[] cornerChars = {'\\', '/', '+'};
 	private static char[] pointMarkers = {'*'};
 	private static char[] dashedLines = {':', '~', '='};
-
+	
 	private static char[] entryPoints1 = {'\\'};
 	private static char[] entryPoints2 = {'|', ':', '+', '\\', '/'};
 	private static char[] entryPoints3 = {'/'};
@@ -72,7 +71,7 @@ public class TextGrid {
 		humanColorCodes.put("RED", "E32");
 		humanColorCodes.put("YEL", "FF3");
 		humanColorCodes.put("BLK", "000");
-
+		
 	}
 
 	private static HashSet<String> markupTags =
@@ -91,18 +90,17 @@ public class TextGrid {
 	public void addToMarkupTags(Collection<String> tags){
 		markupTags.addAll(tags);
 	}
-
-
+	
 
 	public TextGrid(){
-		rows = new ArrayList<StringBuffer>();
+		rows = new ArrayList<StringBuilder>();
 	}
-
+	
 	public TextGrid(int width, int height){
 		String space = StringUtils.repeatString(" ", width);
-		rows = new ArrayList<StringBuffer>();
+		rows = new ArrayList<StringBuilder>();
 		for(int i = 0; i < height; i++)
-			rows.add(new StringBuffer(space));
+			rows.add(new StringBuilder(space));
 	}
 
 	public static TextGrid makeSameSizeAs(TextGrid grid){
@@ -111,10 +109,10 @@ public class TextGrid {
 
 
 	public TextGrid(TextGrid otherGrid){
-		rows = new ArrayList<StringBuffer>();
-		for(StringBuffer row : otherGrid.getRows()) {
-			rows.add(new StringBuffer(row));
-		}
+		rows = new ArrayList<StringBuilder>();
+		for(StringBuilder row : otherGrid.getRows()) {
+			rows.add(new StringBuilder(row));
+		}		
 	}
 
 	public void clear(){
@@ -122,7 +120,7 @@ public class TextGrid {
 		int height = getHeight();
 		rows.clear();
 		for(int i = 0; i < height; i++)
-			rows.add(new StringBuffer(blank));
+			rows.add(new StringBuilder(blank)); 
 	}
 
 //	duplicated code due to lots of hits to this function
@@ -142,15 +140,15 @@ public class TextGrid {
 			|| cell.y < 0) return 0;
 		return rows.get(cell.y).charAt(cell.x);
 	}
-
-	public StringBuffer getRow(int y){
+	
+	public StringBuilder getRow(int y){
 		return rows.get(y);
 	}
 
 	public TextGrid getSubGrid(int x, int y, int width, int height){
 		TextGrid grid = new TextGrid(width, height);
 		for(int i = 0; i < height; i++){
-			grid.setRow(i, new StringBuffer(getRow(y + i).subSequence(x, x + width)));
+			grid.setRow(i, new StringBuilder(getRow(y + i).subSequence(x, x + width)));
 		}
 		return grid;
 	}
@@ -171,7 +169,7 @@ public class TextGrid {
 			|| y > getHeight() - 1
 			|| x < 0
 			|| y < 0) return null;
-		return rows.get(y).substring(x, x + length);
+		return rows.get(y).substring(x, x + length);		
 	}
 
 	public char getNorthOf(int x, int y){ return get(x, y - 1); }
@@ -199,22 +197,22 @@ public class TextGrid {
 
 	public void set(int x, int y, char c){
 		if(x > getWidth() - 1 || y > getHeight() - 1) return;
-		StringBuffer row = rows.get(y);
+		StringBuilder row = rows.get(y);
 		row.setCharAt(x, c);
 	}
-
+	
 	public void setRow(int y, String row){
 		if(y > getHeight() || row.length() != getWidth())
 			throw new IllegalArgumentException("setRow out of bounds or string wrong size");
-		rows.set(y, new StringBuffer(row));
+		rows.set(y, new StringBuilder(row));
 	}
 
-	public void setRow(int y, StringBuffer row){
+	public void setRow(int y, StringBuilder row){
 		if(y > getHeight() || row.length() != getWidth())
 			throw new IllegalArgumentException("setRow out of bounds or string wrong size");
 		rows.set(y, row);
 	}
-
+	
 	public int getWidth(){
 		if(rows.size() == 0) return 0; //empty buffer
 		return rows.get(0).length();
@@ -225,35 +223,35 @@ public class TextGrid {
 	}
 
 	public void printDebug(){
-		Iterator<StringBuffer> it = rows.iterator();
+		Iterator<StringBuilder> it = rows.iterator();
 		int i = 0;
 		System.out.println(
 			"    "
 			+StringUtils.repeatString("0123456789", (int) Math.floor(getWidth()/10)+1));
 		while(it.hasNext()){
 			String row = it.next().toString();
-			String index = Integer.valueOf(i).toString();
+			String index = new Integer(i).toString();
 			if(i < 10) index = " "+index;
 			System.out.println(index+" ("+row+")");
-			i++;
+			i++; 
 		}
 	}
 
 	public String getDebugString(){
-		StringBuffer buffer = new StringBuffer();
-		Iterator<StringBuffer> it = rows.iterator();
+		StringBuilder buffer = new StringBuilder();
+		Iterator<StringBuilder> it = rows.iterator();
 		int i = 0;
 		buffer.append(
 			"    "
 			+StringUtils.repeatString("0123456789", (int) Math.floor(getWidth()/10)+1)+"\n");
 		while(it.hasNext()){
 			String row = it.next().toString();
-			String index = Integer.valueOf(i).toString();
+			String index = new Integer(i).toString();
 			if(i < 10) index = " "+index;
 			row = row.replaceAll("\n", "\\\\n");
 			row = row.replaceAll("\r", "\\\\r");
 			buffer.append(index+" ("+row+")\n");
-			i++;
+			i++; 
 		}
 		return buffer.toString();
 	}
@@ -264,9 +262,9 @@ public class TextGrid {
 
 	/**
 	 * Adds grid to this. Space characters in this grid
-	 * are replaced with the corresponding contents of
+	 * are replaced with the corresponding contents of 
 	 * grid, otherwise the contents are unchanged.
-	 *
+	 * 
 	 * @param grid
 	 * @return false if the grids are of different size
 	 */
@@ -297,7 +295,7 @@ public class TextGrid {
 				char c = get(xi, yi);
 				if(Character.isLetterOrDigit(c)) {
 					boolean isOnHorizontalLine = isOnHorizontalLine(xi, yi);
-					boolean isOnVerticalLine = isOnVerticalLine(xi, yi);
+					boolean isOnVerticalLine = isOnVerticalLine(xi, yi); 
 					if(isOnHorizontalLine && isOnVerticalLine){
 						set(xi, yi, '+');
 						if(DEBUG) System.out.println("replaced type on line '"+c+"' with +");
@@ -310,7 +308,7 @@ public class TextGrid {
 					}
 				}
 			}
-		}
+		}		
 	}
 
 	public void replacePointMarkersOnLine(){
@@ -322,7 +320,7 @@ public class TextGrid {
 				Cell cell = new Cell(xi, yi);
 				if(StringUtils.isOneOf(c, pointMarkers)
 						&& isStarOnLine(cell)){
-
+					
 					boolean isOnHorizontalLine = false;
 					if(StringUtils.isOneOf(get(cell.getEast()), horizontalLines))
 						isOnHorizontalLine = true;
@@ -334,7 +332,7 @@ public class TextGrid {
 						isOnVerticalLine = true;
 					if(StringUtils.isOneOf(get(cell.getSouth()), verticalLines))
 						isOnVerticalLine = true;
-
+ 
 					if(isOnHorizontalLine && isOnVerticalLine){
 						set(xi, yi, '+');
 						if(DEBUG) System.out.println("replaced marker on line '"+c+"' with +");
@@ -347,7 +345,7 @@ public class TextGrid {
 					}
 				}
 			}
-		}
+		}		
 	}
 
 	public CellSet getPointMarkersOnLine(){
@@ -379,17 +377,17 @@ public class TextGrid {
 					humanCode = "c" + humanCode;
 					hexCode = "c" + hexCode;
 					row = row.replaceAll(humanCode, hexCode);
-					rows.set(y, new StringBuffer(row)); //TODO: this is not the most efficient way to do this
+					rows.set(y, new StringBuilder(row)); //TODO: this is not the most efficient way to do this
 					row = rows.get(y).toString();
 				}
 			}
-		}
+		}		
 	}
 
 
 	/**
-	 * Replace all occurences of c1 with c2
-	 *
+	 * Replace all occurrences of c1 with c2
+	 * 
 	 * @param c1
 	 * @param c2
 	 */
@@ -401,7 +399,7 @@ public class TextGrid {
 				char c = get(xi, yi);
 				if(c == c1) set(xi, yi, c2);
 			}
-		}
+		}		
 	}
 
 	public boolean hasBlankCells(){
@@ -465,7 +463,7 @@ public class TextGrid {
 	 * in the grid. Used on buffers that contain only
 	 * type, in order to find the positions and the
 	 * contents of the strings.
-	 *
+	 * 
 	 * @return
 	 */
 	public ArrayList<CellStringPair> findStrings(){
@@ -497,7 +495,7 @@ public class TextGrid {
 	/**
 	 * This is done in a bit of a messy way, should be impossible
 	 * to go out of sync with corresponding GridPatternGroup.
-	 *
+	 * 
 	 * @param cell
 	 * @param entryPointId
 	 * @return
@@ -507,7 +505,7 @@ public class TextGrid {
 		char c = get(cell);
 		if(entryPointId == 1) {
 			return StringUtils.isOneOf(c, entryPoints1);
-
+		
 		} else if(entryPointId == 2) {
 			return StringUtils.isOneOf(c, entryPoints2);
 
@@ -535,7 +533,7 @@ public class TextGrid {
 	/**
 	 * true if cell is blank and the east and west cells are not
 	 * (used to find gaps between words)
-	 *
+	 * 
 	 * @param cell
 	 * @return
 	 */
@@ -567,7 +565,7 @@ public class TextGrid {
 				Cell cell = new Cell(xi, yi);
 				if(isArrowhead(cell)) set(cell, ' ');
 			}
-		}
+		}		
 	}
 
 	public void removeColorCodes(){
@@ -592,10 +590,10 @@ public class TextGrid {
 				if(isBoundary(cell)) toBeRemoved.add(cell);
 			}
 		}
-
+		
 		//remove in two stages, because decision of
-		//isBoundary depends on contants of surrounding
-		//cells
+		//isBoundary depends on content of surrounding
+		//cells 
 		Iterator it = toBeRemoved.iterator();
 		while(it.hasNext()){
 			Cell cell = (Cell) it.next();
@@ -603,8 +601,8 @@ public class TextGrid {
 		}
 	}
 
-	public ArrayList findArrowheads(){
-		ArrayList result = new ArrayList();
+	public ArrayList<Cell> findArrowheads(){
+		ArrayList<Cell> result = new ArrayList<Cell>();
 		int width = getWidth();
 		int height = getHeight();
 		for(int yi = 0; yi < height; yi++){
@@ -632,9 +630,9 @@ public class TextGrid {
 					char cR = s.charAt(1);
 					char cG = s.charAt(2);
 					char cB = s.charAt(3);
-					int r = Integer.valueOf(String.valueOf(cR), 16) * 17;
-					int g = Integer.valueOf(String.valueOf(cG), 16) * 17;
-					int b = Integer.valueOf(String.valueOf(cB), 16) * 17;
+					int r = Integer.valueOf(String.valueOf(cR), 16).intValue() * 17;
+					int g = Integer.valueOf(String.valueOf(cG), 16).intValue() * 17;
+					int b = Integer.valueOf(String.valueOf(cB), 16).intValue() * 17;
 					result.add(new CellColorPair(cell, new Color(r, g, b)));
 				}
 			}
@@ -668,7 +666,7 @@ public class TextGrid {
 		}
 		return result;
 	}
-
+		
 	public void removeMarkupTags(){
 		Iterator it = findMarkupTags().iterator();
 		while (it.hasNext()) {
@@ -679,7 +677,7 @@ public class TextGrid {
 			writeStringTo(pair.cell, StringUtils.repeatString(" ", length));
 		}
 	}
-
+		
 
 
 	public boolean matchesAny(GridPatternGroup criteria){
@@ -720,11 +718,11 @@ public class TextGrid {
 		char c = get(cell.x, cell.y);
 		if(0 == c) return false;
 		if('+' == c || '\\' == c || '/' == c){
-			// System.out.print("");
+			System.out.print("");
 			if(
-			       isIntersection(cell)
+			       isIntersection(cell) 
 				|| isCorner(cell)
-				|| isStub(cell)
+				|| isStub(cell) 
 				|| isCrossOnLine(cell)){
 				return true;
 			} else return false;
@@ -763,10 +761,10 @@ public class TextGrid {
 	public boolean isLinesEnd(int x, int y){
 		return isLinesEnd(new Cell(x, y));
 	}
-
+	
 	/**
 	 * Stubs are also considered end of lines
-	 *
+	 * 
 	 * @param cell
 	 * @return
 	 */
@@ -811,16 +809,16 @@ public class TextGrid {
 	}
 
 	/**
-	 *
+	 * 
 	 * A stub looks like that:
-	 *
+	 * 
 	 * <pre>
-	 *
+	 * 
 	 * +- or -+ or + or + or /- or -/ or / (you get the point)
 	 *             |    |                |
-	 *
+	 * 
 	 * </pre>
-	 *
+	 * 
 	 * @param cell
 	 * @return
 	 */
@@ -864,7 +862,7 @@ public class TextGrid {
 				|| isWestArrowhead(cell)
 				|| isEastArrowhead(cell));
 	}
-
+	
 	public boolean isNorthArrowhead(Cell cell){
 		return get(cell) == '^';
 	}
@@ -881,8 +879,8 @@ public class TextGrid {
 		return (get(cell) == 'v' || get(cell) == 'V')
 				&& isVerticalLine(cell.getNorth());
 	}
-
-
+	
+	
 //	unicode for bullets
 //
 //	2022 bullet
@@ -897,7 +895,7 @@ public class TextGrid {
 	public boolean isBullet(int x, int y){
 		return isBullet(new Cell(x, y));
 	}
-
+	
 	public boolean isBullet(Cell cell){
 		char c = get(cell);
 		if((c == 'o' || c == '*')
@@ -907,7 +905,7 @@ public class TextGrid {
 			return true;
 		return false;
 	}
-
+	
 	public void replaceBullets(){
 		int width = getWidth();
 		int height = getHeight();
@@ -921,11 +919,11 @@ public class TextGrid {
 			}
 		}
 	}
-
+	
 	/**
 	 * true if the cell is not blank
 	 * but the previous (west) is
-	 *
+	 * 
 	 * @param cell
 	 * @return
 	 */
@@ -936,7 +934,7 @@ public class TextGrid {
 	/**
 	 * true if the cell is not blank
 	 * but the next (east) is
-	 *
+	 * 
 	 * @param cell
 	 * @return
 	 */
@@ -1007,7 +1005,7 @@ public class TextGrid {
 	/**
 	 * Returns the neighbours of a line-cell that are boundaries
 	 *  (0 to 2 cells are returned)
-	 *
+	 * 
 	 * @param cell
 	 * @return null if the cell is not a line
 	 */
@@ -1021,7 +1019,7 @@ public class TextGrid {
 			CellSet result = new CellSet();
 			if(isBoundary(cell.getNorth())) result.add(cell.getNorth());
 			if(isBoundary(cell.getSouth())) result.add(cell.getSouth());
-			return result;
+			return result;			
 		}
 		return null;
 	}
@@ -1103,18 +1101,18 @@ public class TextGrid {
 		if(result.contains(blocked)) result.remove(blocked);
 		return result;
 	}
-
+	
 	public CellSet followCell(Cell cell){
 		return followCell(cell, null);
 	}
-
+	
 	public CellSet followCell(Cell cell, Cell blocked){
 		if(isIntersection(cell)) return followIntersection(cell, blocked);
 		if(isCorner(cell)) return followCorner(cell, blocked);
 		if(isLine(cell)) return followLine(cell, blocked);
 		if(isStub(cell)) return followStub(cell, blocked);
 		if(isCrossOnLine(cell)) return followCrossOnLine(cell, blocked);
-		System.err.println("Umbiguous input at position "+cell+":");
+		System.err.println("Ambiguous input at position "+cell+":");
 		TextGrid subGrid = getTestingSubGrid(cell);
 		subGrid.printDebug();
 		throw new RuntimeException("Cannot follow cell "+cell+": cannot determine cell type");
@@ -1135,7 +1133,7 @@ public class TextGrid {
 		return "unrecognisable type";
 	}
 
-
+	
 	public CellSet followCrossOnLine(Cell cell, Cell blocked){
 		CellSet result = new CellSet();
 		if(isHorizontalCrossOnLine(cell)){
@@ -1187,7 +1185,7 @@ public class TextGrid {
 		TextGrid subGrid = getTestingSubGrid(cell);
 		return subGrid.matchesAny(criteria);
 	}
-
+	
 	public boolean isCorner1(Cell cell){
 		return matchesAny(cell, GridPatternGroup.corner1Criteria);
 	}
@@ -1253,7 +1251,7 @@ public class TextGrid {
 			grid.set(cell, this.get(cell));
 		}
 	}
-
+	
 	public boolean equals(TextGrid grid){
 		if(grid.getHeight() != this.getHeight()
 			|| grid.getWidth() != this.getWidth()
@@ -1268,19 +1266,10 @@ public class TextGrid {
 		}
 		return true;
 	}
-
-//	@Override
-//	public int hashCode() {
-//		int h = 0;
-//		for(StringBuffer row : rows) {
-//			h += row.hashCode();
-//		}
-//		return h;
-//	}
-
+	
 	/**
 	 * Fills all the cells in <code>cells</code> with <code>c</code>
-	 *
+	 * 
 	 * @param cells
 	 * @param c
 	 */
@@ -1292,11 +1281,11 @@ public class TextGrid {
 		}
 	}
 
-	/*
-	 *
+	/**
+	 * 
 	 * Fills the continuous area with if c1 characters with c2,
 	 * flooding from cell x, y
-	 *
+	 * 
 	 * @param x
 	 * @param y
 	 * @param c1 the character to replace
@@ -1322,17 +1311,17 @@ public class TextGrid {
 	private CellSet seedFill(Cell seed, char newChar){
 		CellSet cellsFilled = new CellSet();
 		char oldChar = get(seed);
-
+		
 		if(oldChar == newChar) return cellsFilled;
 		if(isOutOfBounds(seed)) return cellsFilled;
 
 		Stack<Cell> stack = new Stack<Cell>();
 
 		stack.push(seed);
-
+		
 		while(!stack.isEmpty()){
 			Cell cell = (Cell) stack.pop();
-
+			
 			//set(cell, newChar);
 			cellsFilled.add(cell);
 
@@ -1340,30 +1329,30 @@ public class TextGrid {
 			Cell sCell = cell.getSouth();
 			Cell eCell = cell.getEast();
 			Cell wCell = cell.getWest();
-
+			
 			if(get(nCell) == oldChar && !cellsFilled.contains(nCell)) stack.push(nCell);
 			if(get(sCell) == oldChar && !cellsFilled.contains(sCell)) stack.push(sCell);
 			if(get(eCell) == oldChar && !cellsFilled.contains(eCell)) stack.push(eCell);
 			if(get(wCell) == oldChar && !cellsFilled.contains(wCell)) stack.push(wCell);
 		}
-
+		
 		return cellsFilled;
 	}
 
 	private CellSet seedFillOld(Cell seed, char newChar){
 		CellSet cellsFilled = new CellSet();
 		char oldChar = get(seed);
-
+		
 		if(oldChar == newChar) return cellsFilled;
 		if(isOutOfBounds(seed)) return cellsFilled;
 
 		Stack<Cell> stack = new Stack<Cell>();
 
 		stack.push(seed);
-
+		
 		while(!stack.isEmpty()){
 			Cell cell = (Cell) stack.pop();
-
+			
 			set(cell, newChar);
 			cellsFilled.add(cell);
 
@@ -1371,22 +1360,22 @@ public class TextGrid {
 			Cell sCell = cell.getSouth();
 			Cell eCell = cell.getEast();
 			Cell wCell = cell.getWest();
-
+			
 			if(get(nCell) == oldChar) stack.push(nCell);
 			if(get(sCell) == oldChar) stack.push(sCell);
 			if(get(eCell) == oldChar) stack.push(eCell);
 			if(get(wCell) == oldChar) stack.push(wCell);
 		}
-
+		
 		return cellsFilled;
 	}
 
 
 	/**
-	 *
+	 * 
 	 * Locates and returns the '*' boundaries that we would
-	 * encounter if we did a flood-fill at <code>seed</code>.
-	 *
+	 * encounter if we did a flood-fill at <code>seed</code>. 
+	 * 
 	 * @param seed
 	 * @return
 	 */
@@ -1401,48 +1390,48 @@ public class TextGrid {
 		Stack<Cell> stack = new Stack<Cell>();
 
 		stack.push(seed);
-
+		
 		while(!stack.isEmpty()){
 			Cell cell = (Cell) stack.pop();
-
+			
 			set(cell, newChar);
 
 			Cell nCell = cell.getNorth();
 			Cell sCell = cell.getSouth();
 			Cell eCell = cell.getEast();
 			Cell wCell = cell.getWest();
-
+			
 			if(get(nCell) == oldChar) stack.push(nCell);
 			else if(get(nCell) == '*') boundaries.add(nCell);
-
+			
 			if(get(sCell) == oldChar) stack.push(sCell);
 			else if(get(sCell) == '*') boundaries.add(sCell);
-
+			
 			if(get(eCell) == oldChar) stack.push(eCell);
 			else if(get(eCell) == '*') boundaries.add(eCell);
-
+			
 			if(get(wCell) == oldChar) stack.push(wCell);
 			else if(get(wCell) == '*') boundaries.add(wCell);
 		}
-
+		
 		return boundaries;
 	}
-
-
+	
+	
 	//TODO: incomplete method seedFillLine()
 	private CellSet seedFillLine(Cell cell, char newChar){
 		CellSet cellsFilled = new CellSet();
-
+		
 		Stack stack = new Stack();
-
+		
 		char oldChar = get(cell);
-
+		
 		if(oldChar == newChar) return cellsFilled;
 		if(isOutOfBounds(cell)) return cellsFilled;
-
+		
 		stack.push(new LineSegment(cell.x, cell.x, cell.y, 1));
 		stack.push(new LineSegment(cell.x, cell.x, cell.y + 1, -1));
-
+		
 		int left;
 		while(!stack.isEmpty()){
 			LineSegment segment = (LineSegment) stack.pop();
@@ -1455,9 +1444,9 @@ public class TextGrid {
 				set(x, segment.y, newChar);
 				cellsFilled.add(new Cell(x, segment.y));
 			}
-
+			
 			left = cell.getEast().x;
-			boolean skip = (x > segment.x1)? true : false;
+			boolean skip = (x > segment.x1)? true : false; 
 
 			if(left < segment.x1){ //leak on left?
 				//TODO: i think the first param should be x
@@ -1473,13 +1462,13 @@ public class TextGrid {
 			       	    set(x, segment.y, newChar);
 			       	    cellsFilled.add(new Cell(x, segment.y));
 			       	}
-
+					
 			       	stack.push(new LineSegment(left, x - 1, segment.y, segment.dy));
 				   	if(x > segment.x2 + 1) //leak on right?
 			        stack.push(new LineSegment(segment.x2 + 1, x - 1, segment.y, -segment.dy));
 			    }
 				skip = false; //skip only once
-
+				
 				for(++x; x <= segment.x2 && get(x, segment.y) != oldChar; ++x){;}
 				left = x;
 			} while( x < segment.x2);
@@ -1487,51 +1476,74 @@ public class TextGrid {
 
 		return cellsFilled;
 	}
-
+	
 	public boolean cellContainsDashedLineChar(Cell cell){
 		char c = get(cell);
 		return StringUtils.isOneOf(c, dashedLines);
 	}
 
+//	public boolean loadFrom(String filename)
+//			throws FileNotFoundException, IOException
+//			{
+//		return loadFrom(filename, null);
+//	}
+//
+//	public boolean loadFrom(String filename, ProcessingOptions options)
+//		throws IOException
+//	{
+//				
+//		String encoding = (options == null) ? null : options.getCharacterEncoding();
+//		ArrayList<StringBuilder> lines = new ArrayList<StringBuilder>();
+//		InputStream is;
+//		if ("-".equals(filename))
+//		    is = System.in;
+//		else
+//		    is = new FileInputStream(filename);
+//		String[] linesArray = FileUtils.readFile(is, filename, encoding).split("(\r)?\n");
+//		for(int i = 0; i  < linesArray.length; i++)
+//			lines.add(new StringBuilder(linesArray[i]));
+//		
+//		return initialiseWithLines(lines, options);
+//	}
 
 	public boolean initialiseWithText(String text, ProcessingOptions options) throws UnsupportedEncodingException {
 
-		ArrayList<StringBuffer> lines = new ArrayList<StringBuffer>();
+		ArrayList<StringBuilder> lines = new ArrayList<StringBuilder>();
 		String[] linesArray = text.split("(\r)?\n");
 		for(int i = 0; i  < linesArray.length; i++)
-			lines.add(new StringBuffer(linesArray[i]));
+			lines.add(new StringBuilder(linesArray[i]));
 
 		return initialiseWithLines(lines, options);
 	}
 
-	public boolean initialiseWithLines(ArrayList<StringBuffer> lines, ProcessingOptions options) throws UnsupportedEncodingException {
+	public boolean initialiseWithLines(ArrayList<StringBuilder> lines, ProcessingOptions options) throws UnsupportedEncodingException {
 
 		//remove blank rows at the bottom
-
-		rows = new ArrayList<>();
-
-		for (StringBuffer row:lines) {
-			if(!StringUtils.isBlank(row.toString()))
-				rows.add(row);
+		boolean done = false;
+		int i;
+		for(i = lines.size() - 1; i >= 0 && !done; i--){
+			StringBuilder row = lines.get(i);
+			if(!StringUtils.isBlank(row.toString())) done = true;
 		}
+		rows = new ArrayList<StringBuilder>(lines.subList(0, i + 2));
 
 		if(options != null) fixTabs(options.getTabSize());
-		else fixTabs(ProcessingOptions.DEFAULT_TAB_SIZE);
+		else fixTabs(options.DEFAULT_TAB_SIZE);
 
 
 		// make all lines of equal length
 		// add blank outline around the buffer to prevent fill glitch
 		// convert tabs to spaces (or remove them if setting is 0)
-
+		
 		int blankBorderSize = 2;
-
+		
 		int maxLength = 0;
 		int index = 0;
-
+		
 		String encoding = null;
-		//if(options != null) encoding = options.getCharacterEncoding();
-
-		Iterator<StringBuffer> it = rows.iterator();
+		if(options != null) encoding = options.getCharacterEncoding();
+		
+		Iterator<StringBuilder> it = rows.iterator();
 		while(it.hasNext()){
 			String row = it.next().toString();
 			if(encoding != null){
@@ -1539,56 +1551,56 @@ public class TextGrid {
 				row = new String(bytes, encoding);
 			}
 			if(row.length() > maxLength) maxLength = row.length();
-			rows.set(index, new StringBuffer(row));
+			rows.set(index, new StringBuilder(row));
 			index++;
 		}
 
 		it = rows.iterator();
-		ArrayList<StringBuffer> newRows = new ArrayList<StringBuffer>();
+		ArrayList<StringBuilder> newRows = new ArrayList<StringBuilder>();
 		//TODO: make the following depend on blankBorderSize
-
-		StringBuffer topBottomRow =
-			new StringBuffer(StringUtils.repeatString(" ", maxLength + blankBorderSize * 2));
-
+		
+		StringBuilder topBottomRow =
+			new StringBuilder(StringUtils.repeatString(" ", maxLength + blankBorderSize * 2));
+		
 		newRows.add(topBottomRow);
 		newRows.add(topBottomRow);
 		while(it.hasNext()){
-			StringBuffer row = it.next();
-
+			StringBuilder row = it.next();
+			
 			if(row.length() < maxLength) {
 				String borderString = StringUtils.repeatString(" ", blankBorderSize);
-				StringBuffer newRow = new StringBuffer();
-
+				StringBuilder newRow = new StringBuilder();
+				
 				newRow.append(borderString);
 				newRow.append(row);
 				newRow.append(StringUtils.repeatString(" ", maxLength - row.length()));
 				newRow.append(borderString);
-
+				
 				newRows.add(newRow);
 			} else { //TODO: why is the following line like that?
-				newRows.add(new StringBuffer("  ").append(row).append("  "));
+				newRows.add(new StringBuilder("  ").append(row).append("  "));
 			}
 		}
 		//TODO: make the following depend on blankBorderSize
 		newRows.add(topBottomRow);
 		newRows.add(topBottomRow);
 		rows = newRows;
-
+		
 		replaceBullets();
 		replaceHumanColorCodes();
-
+		
 		return true;
 	}
-
+	
 	private void fixTabs(int tabSize){
 
 		int rowIndex = 0;
-		Iterator<StringBuffer> it = rows.iterator();
+		Iterator<StringBuilder> it = rows.iterator();
 
 		while(it.hasNext()){
 			String row = it.next().toString();
-			StringBuffer newRow = new StringBuffer();
-
+			StringBuilder newRow = new StringBuilder();
+			
 			char[] chars = row.toCharArray();
 			for(int i = 0; i < chars.length; i++){
 				if(chars[i] == '\t'){
@@ -1607,14 +1619,14 @@ public class TextGrid {
 			rowIndex++;
 		}
 	}
-
+	
 	/**
 	 * @return
 	 */
-	protected ArrayList<StringBuffer> getRows() {
+	protected ArrayList<StringBuilder> getRows() {
 		return rows;
 	}
-
+	
 	public class CellColorPair{
 		public CellColorPair(Cell cell, Color color){
 			this.cell = cell;
@@ -1642,20 +1654,20 @@ public class TextGrid {
 		public String tag;
 	}
 
-
+	
 	public class Cell{
 
 		public int x, y;
-
+		
 		public Cell(Cell cell){
 			this(cell.x, cell.y);
 		}
-
+		
 		public Cell(int x, int y){
 			this.x = x;
 			this.y = y;
 		}
-
+		
 		public Cell getNorth(){ return new Cell(x, y - 1); }
 		public Cell getSouth(){ return new Cell(x, y + 1); }
 		public Cell getEast(){ return new Cell(x + 1, y); }
@@ -1721,32 +1733,32 @@ public class TextGrid {
 			if(x == cell.x && y == cell.y) return true;
 			else return false;
 		}
-
+		
 		public int hashCode() {
 			return (x << 16) | y;
 		}
-
+		
 		public boolean isNextTo(int x2, int y2){
 			if(Math.abs(x2 - x) == 1 && Math.abs(y2 - y) == 1) return false;
 			if(Math.abs(x2 - x) == 1 && y2 == y) return true;
 			if(Math.abs(y2 - y) == 1 && x2 == x) return true;
 			return false;
 		}
-
+		
 		public boolean isNextTo(Cell cell){
 			if(cell == null) throw new IllegalArgumentException("cell cannot be null");
 			return this.isNextTo(cell.x, cell.y);
 		}
-
+		
 		public String toString(){
 			return "("+x+", "+y+")";
 		}
-
+		
 		public void scale(int s){
 			x = x * s;
 			y = y * s;
 		}
-
+		
 	}
 
 	private class LineSegment{
